--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,7 +1,8 @@
 body{
     color: #BBAACC!important;
     background-image: url(https://horizons-ecv.netlify.app/julentto-photography-CIuakYIjadc-unsplash%201.png);
-    background-size: cover;
+    background-size: 100vh;
+    background-repeat: no-repeat;
     background-position-y: 50px;
 }
 
